--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node ./dist/index.js",
+    "postinstall": "tsc",
     "dev": "ts-node-dev --rs --poll ./src/index.ts",
     "build": "tsc"
   },
