--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "netlify-lambda": "^2.0.15",
+    "serverless-http": "^3.0.2",
     "typescript": "^4.8.2"
   }
 }
